# brunnermunzel_from_count_data

./: .gitignore  README.md  pyproject.toml  setup.py
brunnermunzel_from_count_data/: __init__.py
tests/: test_brunnermunzel_from_count_data.py
