[tool.flake8]
extend-ignore = "E203,E501,W503,W504"

[tool.isort]
profile = "black"

[tool.poetry]
name = "brunnermunzel_from_count_data"
version = "1.0.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
scipy = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = {extras = ["pyproject"], version = "^5.11.5"}
mypy = "^1.4"
pydocstyle = "^6.3.0"
pyproject-flake8 = "^5.0.4.post1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
